# jnp-6

./: .clang-format  CMakeLists.txt  computer.h  ooasm.cpp  ooasm.h  test.cpp  test_grzesiek.cpp  test_krzysiek.cpp  test_rafal.cpp
task/: ooasm_example.cc  ooasm_kryteria.txt  ooasm_tresc.txt
